--- a/app/src/main/res/layout/activity_check_out__.xml
+++ b/app/src/main/res/layout/activity_check_out__.xml
@@ -20,7 +20,7 @@ tools:context=".Activity.Check_out__Activity">
         android:theme="@style/Toolbar_Arrow"
         android:textAlignment="center"
         app:titleTextAppearance="@color/Titel"
-        android:background="@color/Toolbar">
+        android:background="@color/Text">
     </android.support.v7.widget.Toolbar>
 </LinearLayout>
 
@@ -70,8 +70,7 @@ tools:context=".Activity.Check_out__Activity">
             android:id="@+id/place_orderbttn"
             android:text="Place Order"
             android:textColor="#fff"
-
-            android:background="@color/Toolbar"/>
+            android:background="@color/Text"/>
 
 
 
