--- a/app/src/main/res/layout/activity_customize__order.xml
+++ b/app/src/main/res/layout/activity_customize__order.xml
@@ -16,7 +16,7 @@ tools:context=".Activity.Customize_Order">
     android:elevation="10dp"
     app:titleTextAppearance="@style/customer_nu"
     app:titleTextColor="@color/white"
-    android:background="@color/Toolbar"
+    android:background="@color/Text"
     android:theme="@style/Toolbar_Arrow"
     android:layout_gravity="center"
     android:textAlignment="center">
