--- a/app/src/main/res/layout/activity_manage__categories.xml
+++ b/app/src/main/res/layout/activity_manage__categories.xml
@@ -16,7 +16,7 @@ tools:context=".Activity.Manage_Categories">
     android:layout_height="45dp"
     android:elevation="10dp"
     app:titleTextColor="@color/white"
-    android:background="@color/Toolbar"
+    android:background="@color/Text"
     android:theme="@style/Toolbar_Arrow"
     android:layout_gravity="center"
     android:textAlignment="center">
