--- a/app/src/main/res/layout/activity_seller__order__history.xml
+++ b/app/src/main/res/layout/activity_seller__order__history.xml
@@ -20,7 +20,7 @@ tools:context=".Activity.Seller_Order_History">
         android:theme="@style/Toolbar_Arrow"
         android:textAlignment="center"
         app:titleTextAppearance="@color/Titel"
-        android:background="@color/Toolbar">
+        android:background="@color/Text">
     </android.support.v7.widget.Toolbar>
 </LinearLayout>
 
