--- a/app/src/main/res/layout/activity_slider_activity.xml
+++ b/app/src/main/res/layout/activity_slider_activity.xml
@@ -26,7 +26,7 @@
             android:elevation="10dp"
             android:textAlignment="center"
             app:titleTextAppearance="@color/Titel"
-            android:background="@color/Toolbar">
+            android:background="@color/Text">
 
 
 
