--- a/app/src/main/res/layout/activity_varient_.xml
+++ b/app/src/main/res/layout/activity_varient_.xml
@@ -16,7 +16,7 @@ tools:context=".Activity.Varient_Activity">
     android:elevation="10dp"
     app:titleTextColor="@color/white"
     app:titleTextAppearance="@font/catamaran_light"
-    android:background="@color/Toolbar"
+    android:background="@color/Text"
     android:theme="@style/Toolbar_Arrow"
     android:fontFamily="@font/catamaran"
     android:textAlignment="center">
