--- a/app/src/main/res/layout/fragment_home_fragment_1.xml
+++ b/app/src/main/res/layout/fragment_home_fragment_1.xml
@@ -139,11 +139,11 @@
             android:id="@+id/bottomify_nav"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@color/colorPrimary"
+            android:background="@color/Text"
             android:orientation="horizontal"
             app:menu="@menu/home_page_menus"
-            app:active_color="@color/bottomifyActiveColor"
-            app:passive_color="@color/bottomifyPassiveColor"
+            app:active_color="@color/white"
+            app:passive_color="@color/white"
             app:pressed_color="@color/bottomifyPressedColor"
             app:item_text_size="10sp"
             app:item_padding="4dp"
