--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -15,6 +15,7 @@
     <color name="green">#ff62b255</color>
     <color name="hint">#4A4A4A</color>
     <color name="light_blue">#F3F7FB</color>
+    <color name="offline_colour">#F4F4F4</color>
 
 
 
