--- a/app/src/main/res/layout/activity_add_new_product_activity.xml
+++ b/app/src/main/res/layout/activity_add_new_product_activity.xml
@@ -18,7 +18,7 @@ xmlns:app="http://schemas.android.com/apk/res-auto"
         android:elevation="10dp"
         app:titleTextColor="@color/white"
         app:titleTextAppearance="@font/catamaran_light"
-        android:background="@color/Toolbar"
+        android:background="@color/Text"
         android:theme="@style/Toolbar_Arrow"
         android:fontFamily="@font/catamaran"
         android:textAlignment="center">
