--- a/app/src/main/res/layout/activity_address_.xml
+++ b/app/src/main/res/layout/activity_address_.xml
@@ -33,7 +33,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
                 app:layout_collapseMode="pin"
-                android:background="@color/Toolbar"
+                android:background="@color/Text"
                />
 
 
