--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -11,7 +11,7 @@
         android:id="@+id/forgottoolbar"
         android:layout_width="match_parent"
         android:layout_height="45dp"
-        android:background="@color/Toolbar"
+        android:background="@color/Text"
         android:textAlignment="center"
         android:theme="@style/Toolbar_Arrow"
         app:titleTextAppearance="@color/Titel"
