--- a/app/src/main/res/layout/activity_orders__history_.xml
+++ b/app/src/main/res/layout/activity_orders__history_.xml
@@ -21,7 +21,7 @@ tools:context=".Activity.Orders_History_Activity">
             android:theme="@style/Toolbar_Arrow"
             android:textAlignment="center"
             app:titleTextAppearance="@color/Titel"
-            android:background="@color/Toolbar">
+            android:background="@color/Text">
 
 
 
