--- a/app/src/main/res/layout/activity_search_.xml
+++ b/app/src/main/res/layout/activity_search_.xml
@@ -20,7 +20,7 @@
         android:theme="@style/Toolbar_Arrow"
         android:textAlignment="center"
         app:titleTextAppearance="@color/Titel"
-        android:background="@color/Toolbar">
+        android:background="@color/Text">
 
 
 
