--- a/app/src/main/res/layout/activity_seller_portal_.xml
+++ b/app/src/main/res/layout/activity_seller_portal_.xml
@@ -23,7 +23,7 @@ android:layout_height="match_parent">
     android:theme="@style/Toolbar_Arrow"
     android:textAlignment="center"
     app:titleTextAppearance="@color/Titel"
-    android:background="@color/Toolbar">
+    android:background="@color/Text">
     <!--<TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
