--- a/app/src/main/res/layout/activity_sign_up_.xml
+++ b/app/src/main/res/layout/activity_sign_up_.xml
@@ -14,7 +14,7 @@
         android:theme="@style/Toolbar_Arrow"
         android:textAlignment="center"
         app:titleTextAppearance="@color/Titel"
-        android:background="@color/Toolbar">
+        android:background="@color/Text">
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
