--- a/app/src/main/res/layout/activity_wishlist_.xml
+++ b/app/src/main/res/layout/activity_wishlist_.xml
@@ -22,7 +22,7 @@ tools:context=".Activity.Wishlist_Activity">
         android:theme="@style/Toolbar_Arrow"
         android:textAlignment="center"
         app:titleTextAppearance="@color/Titel"
-        android:background="@color/Toolbar">
+        android:background="@color/Text">
 
 
 
