--- a/app/src/main/res/layout/cart_card_layout.xml
+++ b/app/src/main/res/layout/cart_card_layout.xml
@@ -8,7 +8,7 @@
     app:cardCornerRadius="4dp"
     android:padding="4dp"
     android:elevation="5dp"
-   android:outlineProvider="paddedBounds"
+    android:outlineProvider="paddedBounds"
     android:layout_marginHorizontal="3dp"
     android:clipToPadding="true"
     app:cardPreventCornerOverlap="false"
@@ -44,6 +44,7 @@
                 android:layout_margin="2dp"
                 android:paddingRight="1dp"
                 />
+
             <TableLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
@@ -56,7 +57,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:textSize="12dp"
-                        android:layout_weight="1"
+                        android:layout_weight="0.1"
                         android:fontFamily="@font/catamaran"
                         android:text="SKU:"
                         android:layout_marginBottom="8dp"/>
@@ -65,6 +66,7 @@
                         android:layout_height="wrap_content"
                         android:textSize="12dp"
                         android:layout_weight="2"
+                        android:textAlignment="center"
                         android:singleLine="true"
                         android:fontFamily="@font/catamaran"
                         android:id="@+id/d_produc_name"
@@ -76,7 +78,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:textSize="12dp"
-                        android:layout_weight="1"
+                        android:layout_weight="0.1"
                         android:fontFamily="@font/catamaran"
                         android:text="Seller :"
                         android:layout_marginBottom="8dp"/>
@@ -84,6 +86,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent"
                         android:textSize="12dp"
+                        android:textAlignment="center"
                         android:text=""
                         android:id="@+id/seller_name"
                         android:layout_weight="2"
@@ -92,9 +95,9 @@
                 <TableRow>
                     <TextView
                         android:layout_width="match_parent"
-                        android:layout_height="match_parent"
+                        android:layout_height="wrap_content"
                         android:textSize="12dp"
-                        android:layout_weight="1"
+                        android:layout_weight="0.1"
                         android:text="Quantity: "
                         android:fontFamily="@font/catamaran"
                         android:layout_marginBottom="8dp"/>
@@ -103,8 +106,30 @@
                         android:layout_height="wrap_content"
                         android:textSize="12dp"
                         android:id="@+id/d_quantity"
+                        android:textAlignment="center"
                         android:fontFamily="@font/catamaran"
                         android:layout_weight="2"
+                        android:layout_marginBottom="8dp"/>
+
+
+                </TableRow>
+                <TableRow>
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:textSize="12dp"
+                        android:fontFamily="@font/catamaran"
+                        android:layout_weight="0.1"
+                        android:text="Gross weight(gms):"
+                        android:layout_marginBottom="8dp"/>
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:textSize="12dp"
+                        android:textAlignment="center"
+                        android:fontFamily="@font/catamaran"
+                        android:layout_weight="2"
+                        android:id="@+id/d_grpss_weight"
                         android:layout_marginBottom="8dp"/>
                 </TableRow>
                 <TableRow>
@@ -113,33 +138,16 @@
                         android:layout_height="match_parent"
                         android:textSize="12dp"
                         android:fontFamily="@font/catamaran"
-                        android:layout_weight="1"
-                        android:text="Gross weight(gms):"
+                        android:layout_weight="0.1"
+                        android:text="Expected Delivery Date:"
                         android:layout_marginBottom="8dp"/>
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:textSize="12dp"
-                        android:fontFamily="@font/catamaran"
-                        android:layout_weight="2"
-                        android:id="@+id/d_grpss_weight"
-                        android:layout_marginBottom="8dp"/>
-                </TableRow>
-                <TableRow>
 
                     <TextView
-                        android:layout_width="16dp"
-                        android:layout_height="wrap_content"
-                        android:layout_marginBottom="8dp"
-                        android:layout_weight="1"
-                        android:fontFamily="@font/catamaran"
-                        android:hint="Expected Delivery Date"
-                        android:textSize="12dp" />
-                    <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:textSize="12dp"
                         android:fontFamily="@font/catamaran"
+                        android:textAlignment="center"
                         android:layout_weight="2"
                         android:id="@+id/delivery_date"
                         android:layout_marginBottom="8dp"/>
@@ -200,18 +208,7 @@
                         android:layout_weight="2"
                         android:layout_marginBottom="8dp"/>
                 </TableRow>-->
-              <LinearLayout
-                  android:layout_width="wrap_content"
-                  android:layout_height="match_parent"
-                  >
-                  <TextView
-                      android:layout_width="match_parent"
-                      android:layout_height="match_parent"
-                      android:fontFamily="@font/catamaran"
-                      android:id="@+id/description"/>
 
-
-              </LinearLayout>
 
                <!-- <TableRow>
                     <TextView
@@ -252,6 +249,14 @@
             </TableLayout>
 
         </LinearLayout>
+      <!--  <Spinner
+            android:layout_width="wrap_content"
+            android:layout_weight="0"
+           android:layout_gravity="center"
+            android:id="@+id/item_spinner"
+            android:layout_height="wrap_content">
+
+        </Spinner>-->
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -282,116 +287,4 @@
         </LinearLayout>
     </LinearLayout>
 </android.support.v7.widget.CardView>
-<!--
-<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
-    app:cardUseCompatPadding="true"
-    app:cardCornerRadius="4dp"
-    android:padding="4dp"
-    android:layout_marginHorizontal="3dp"
-    app:cardPreventCornerOverlap="false"
-    app:cardElevation="3dp">
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:paddingHorizontal="10dp">
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/cart_pname"
-            android:textSize="14dp"
-            android:layout_marginTop="4dp"
-            android:layout_marginBottom="8dp"
-            />
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="horizontal"
-            android:weightSum="9">
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="vertical"
-                android:layout_weight="4">
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:textSize="12dp"
-                    android:text="Qty: 1"
-                    android:layout_marginBottom="8dp"/>
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal"
-                    android:weightSum="4">
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:id="@+id/p_price"
-                        android:textColor="#000"
-                        android:gravity="center_vertical"
-                        android:fontFamily="sans-serif-condensed"
-                        android:paddingRight="2dp"
 
-                        android:layout_weight="2"
-                        android:layout_marginBottom="8dp"/>
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:textSize="11dp"
-                        android:id="@+id/old_price"
-                        android:gravity="center_vertical"
-
-                        android:layout_weight="2"
-                        android:layout_marginBottom="8dp"/>
-                </LinearLayout>
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:textSize="12dp"
-                    android:id="@+id/pDelivery"
-                    android:layout_marginBottom="8dp"/>
-
-            </LinearLayout>
-
-            <ImageView
-                android:id="@+id/cart_image"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_marginBottom="8dp"
-                android:layout_weight="5" />
-        </LinearLayout>
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="horizontal"
-            android:layout_marginBottom="20dp"
-            android:weightSum="4">
-
-            <Button
-                android:layout_width="match_parent"
-                android:layout_height="26dp"
-                android:id="@+id/remove"
-                android:text="Remove"
-                android:fontFamily="sans-serif-light"
-                android:textColor="#563637"
-                android:background="@drawable/butn_design2"
-                android:layout_marginRight="2dp"
-                android:layout_weight="2"/>
-            <Button
-                android:layout_width="match_parent"
-                android:layout_height="26dp"
-                android:text="UPDATE"
-                android:id="@+id/wishlist"
-                android:fontFamily="sans-serif-light"
-                android:textColor="#563637"
-                android:layout_marginLeft="2dp"
-                android:background="@drawable/button_design"
-                android:layout_weight="2"/>
-        </LinearLayout>
-    </LinearLayout>
-</android.support.v7.widget.CardView>-->
