--- a/app/src/main/res/layout/fragment_filter.xml
+++ b/app/src/main/res/layout/fragment_filter.xml
@@ -13,50 +13,48 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:id="@+id/filter_text"
         android:fontFamily="@font/catamaran"
         android:text="FILTERS "/>
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="2dp"
-        android:layout_marginTop="10dp">
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="2dp"
-            android:background="@color/whish"/>
 
-    </LinearLayout>
 
 
     <RelativeLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:orientation="horizontal"
         android:layout_width="match_parent"
+        android:id="@+id/list"
+        android:layout_below="@+id/filter_text"
+        android:layout_above="@+id/buttons"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        android:layout_marginBottom="25dp"
+        android:layout_marginBottom="8dp"
         >
 
         <ExpandableListView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:groupIndicator="@null"
             android:id="@+id/expand">
 
         </ExpandableListView>
     </RelativeLayout>
 
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/buttons"
         android:orientation="horizontal"
-        android:layout_marginTop="20dp"
+        android:layout_margin="25dp"
+         android:layout_below="@+id/list"
         android:weightSum="4">
 
         <Button
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="26dp"
             android:id="@+id/clear"
-            android:text="Clear All"
+            android:text="Clear"
             android:textStyle="bold"
             android:fontFamily="sans-serif-light"
             android:textColor="@color/black"
@@ -64,15 +62,16 @@
             android:layout_marginRight="2dp"
             android:layout_weight="2"/>
         <Button
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="26dp"
             android:text="Apply"
             android:textStyle="bold"
+            android:layout_alignParentRight="true"
             android:id="@+id/applay"
             android:fontFamily="sans-serif-light"
             android:textColor="@color/black"
             android:layout_marginLeft="2dp"
             android:background="@drawable/simpple_button"
             android:layout_weight="2"/>
-    </LinearLayout>
+    </RelativeLayout>
 </LinearLayout>
