--- a/app/src/main/res/layout/fragment_seller__orer__his_frag2.xml
+++ b/app/src/main/res/layout/fragment_seller__orer__his_frag2.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".Fragments.Seller_Orer_His_frag2">
 
     <LinearLayout
@@ -10,7 +11,6 @@
         android:layout_height="match_parent"
         android:layout_below="@+id/cart_frame"
         android:id="@+id/cartl"
-        android:background="@color/whish"
         android:layout_above="@+id/btn_lay"
         android:orientation="vertical">
 
