--- a/app/src/main/res/menu/activity_seller__portal__screen__drawer.xml
+++ b/app/src/main/res/menu/activity_seller__portal__screen__drawer.xml
@@ -40,6 +40,11 @@
 
                 android:title="Order History" />
 
+            <item
+                android:id="@+id/offline"
+
+                android:title="Offline Order" />
+
         </menu>
     </item>
     <item android:title="My Account">
