--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -92,4 +92,95 @@
         <item name="android:textSize">18sp</item>
     </style>
 
+    ////////////////////////Material Design////////////////////////////
+
+    <style name="DialogAnimation">
+        <item name="android:windowEnterAnimation">@anim/slide_up_animation</item>
+        <item name="android:windowExitAnimation">@anim/slide_down_animation</item>
+    </style>
+
+    <style name="item">
+        <item name="android:textSize">
+            12sp
+        </item>
+        <item name="android:textColor">
+            #24406A
+        </item>
+    </style>
+
+
+        <style name="size_length">
+
+        <item name="android:textSize">
+            12sp
+        </item>
+
+        <item name="android:textColor">
+            #24406A
+        </item>
+
+    </style>
+
+
+    <style name="product_name">
+
+        <item name="android:textSize">
+            12sp
+        </item>
+
+        <item name="android:textColor">
+            #24406A
+        </item>
+
+    </style>
+
+    <style name="sku">
+
+        <item name="android:textSize">
+            10sp
+        </item>
+
+        <item name="android:textColor">
+            #868686
+        </item>
+
+    </style>
+
+    ///////////offline popup//////
+    <style name="heading">
+
+        <item name="android:textSize">
+            14sp
+        </item>
+
+        <item name="android:textColor">
+            #000000
+        </item>
+
+    </style>
+
+    <style name="thin">
+
+        <item name="android:textSize">
+            9sp
+        </item>
+
+        <item name="android:textColor">
+            #000000
+        </item>
+
+    </style>
+
+    <style name="thick">
+
+        <item name="android:textSize">
+            11sp
+        </item>
+
+        <item name="android:textColor">
+            #000000
+        </item>
+
+    </style>
+
 </resources>
