--- a/app/src/main/res/layout/fragment_offline_fragment1.xml
+++ b/app/src/main/res/layout/fragment_offline_fragment1.xml
@@ -1,10 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".Fragments.Offline_fragment1">
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:layout_above="@+id/place_button"
+        android:layout_marginBottom="3dp"
+        android:id="@+id/frame2">
+    <android.support.v7.widget.Toolbar
+        android:layout_width="match_parent"
+        android:id="@+id/offline_toolbar"
+        android:layout_height="45dp"
+        app:titleTextColor="@color/Titel"
+        android:theme="@style/Toolbar_Arrow"
+        android:textAlignment="center"
+        app:titleTextAppearance="@color/Titel"
+        android:background="@color/Text">
+
+        <RelativeLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/add_button"
+            android:layout_alignParentRight="true"
+            android:layout_marginRight="15dp"
+            app:srcCompat="@drawable/white_add_button"/>
+        </RelativeLayout>
+    </android.support.v7.widget.Toolbar>
 
     <LinearLayout
         android:layout_width="wrap_content"
@@ -14,8 +44,8 @@
         android:layout_centerHorizontal="true"
        android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
-        android:layout_marginTop="8dp"
         android:background="@color/offline_colour">
+
 
        <RelativeLayout
            android:layout_width="0dp"
@@ -58,6 +88,29 @@
                 />
         </RelativeLayout>
 
+
+
+
+        <RelativeLayout
+            android:layout_width="0dp"
+            android:layout_height="40dp"
+            android:layout_weight="0.8"
+            android:background="@drawable/borders">
+            <TextView
+                android:id="@+id/qty"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentRight="true"
+                android:layout_alignParentTop="true"
+                android:layout_alignParentBottom="true"
+                android:text="@string/quantity"
+                android:textAppearance="@style/item"
+                android:lineSpacingExtra="0sp"
+                android:gravity="center_horizontal|center_vertical"
+                />
+        </RelativeLayout>
+
         <RelativeLayout
             android:layout_width="0dp"
             android:layout_height="40dp"
@@ -81,48 +134,6 @@
         </RelativeLayout>
 
 
-        <RelativeLayout
-            android:layout_width="0dp"
-            android:layout_height="40dp"
-            android:layout_weight="0.5"
-            android:background="@drawable/borders">
-            <TextView
-                android:id="@+id/qty"
-                android:layout_width="0dp"
-                android:layout_height="0dp"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentRight="true"
-                android:layout_alignParentTop="true"
-                android:layout_alignParentBottom="true"
-                android:text="@string/quantity"
-                android:textAppearance="@style/item"
-                android:lineSpacingExtra="0sp"
-                android:gravity="center_horizontal|center_vertical"
-                />
-        </RelativeLayout>
-
-
-        <RelativeLayout
-            android:layout_width="0dp"
-            android:layout_height="40dp"
-            android:layout_weight="1.2"
-            android:layout_gravity="center"
-            android:background="@drawable/borders">
-            <TextView
-                android:id="@+id/total_g_wt_"
-                android:layout_width="0dp"
-                android:layout_height="0dp"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentRight="true"
-                android:layout_alignParentTop="true"
-                android:layout_alignParentBottom="true"
-                android:text="@string/total_g_wt_"
-                android:textAppearance="@style/item"
-                android:lineSpacingExtra="0sp"
-                android:gravity="center_horizontal|center_vertical"
-                />
-
-        </RelativeLayout>
 
 
 
@@ -132,8 +143,23 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/offline_recycler"
+
         android:layout_below="@+id/header">
 
     </android.support.v7.widget.RecyclerView>
+
+
+
+    </LinearLayout>
+
+    <Button
+        android:id="@+id/place_button"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:textSize="15dp"
+        android:background="@color/Text"
+        android:hint="PLACE ORDER"
+        android:textColorHint="@color/white" />
 
 </RelativeLayout>
