--- a/app/src/main/res/layout/fragment_offline_fragment1.xml
+++ b/app/src/main/res/layout/fragment_offline_fragment1.xml
@@ -9,7 +9,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:layout_above="@+id/place_button"
+        android:layout_above="@+id/total_text"
         android:layout_marginBottom="3dp"
         android:id="@+id/frame2">
     <android.support.v7.widget.Toolbar
@@ -45,6 +45,9 @@
        android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
         android:background="@color/offline_colour">
+
+
+
 
 
        <RelativeLayout
@@ -109,6 +112,8 @@
                 android:lineSpacingExtra="0sp"
                 android:gravity="center_horizontal|center_vertical"
                 />
+
+
         </RelativeLayout>
 
         <RelativeLayout
@@ -152,6 +157,38 @@
 
     </LinearLayout>
 
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/total_text"
+        android:padding="10dp"
+        android:background="@drawable/gray_backround_design"
+        android:gravity="bottom"
+        android:layout_above="@+id/place_button">
+
+    <TextView
+        android:id="@+id/total_gross"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/total_gross"
+        android:textAppearance="@style/heading1"
+        android:lineSpacingExtra="8sp"
+        android:gravity="center_vertical"
+        />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/total"
+            android:layout_alignParentRight="true"
+            android:textAppearance="@style/heading1"
+            android:lineSpacingExtra="8sp"
+            android:gravity="center_vertical"
+            />
+
+    </RelativeLayout>
+
     <Button
         android:id="@+id/place_button"
         android:layout_width="match_parent"
@@ -160,6 +197,7 @@
         android:textSize="15dp"
         android:background="@color/Text"
         android:hint="PLACE ORDER"
-        android:textColorHint="@color/white" />
+        android:textColorHint="@color/white"/>
+
 
 </RelativeLayout>
