--- a/app/src/main/res/layout/offline_order_layout.xml
+++ b/app/src/main/res/layout/offline_order_layout.xml
@@ -3,6 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:id="@+id/item_layout"
     android:layout_height="wrap_content">
 
     <LinearLayout
@@ -70,7 +71,7 @@
                 android:layout_alignParentRight="true"
                 android:layout_alignParentTop="true"
                 android:layout_alignParentBottom="true"
-                android:textAppearance="@style/size_length"
+                android:textStyle="italic"
                 android:gravity="center_horizontal|center_vertical"
                 />
         </RelativeLayout>
@@ -94,11 +95,13 @@
                     android:layout_alignParentLeft="true"
                     android:layout_alignParentRight="true"
                     android:layout_alignParentTop="true"
+                    android:background="@null"
                     android:layout_alignParentBottom="true"
                     android:textAppearance="@style/item"
                     android:lineSpacingExtra="0sp"
                     android:gravity="center_horizontal|center_vertical"
                     />
+
             </RelativeLayout>
         </LinearLayout>
 
@@ -117,10 +120,11 @@
             android:layout_gravity="center"
             android:background="@drawable/gray_backround_design">
 
-            <TextView
+            <EditText
                 android:id="@+id/g_wt_gms_"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:inputType="numberDecimal"
                 android:layout_alignParentTop="true"
                 android:background="@drawable/gray_backround_design"
                 android:layout_alignParentBottom="true"
